www/css/index.css
body {
    background-color: #f1f1f3;
}

/*
custom css for navbar
 */
.navbar-default {
  background-color: #5bb7a9;
  border-color: #4e9d91;
  /*Added by Harpreet*/
  background-image: none;
  background-image: linear-gradient(to bottom,rgba(131, 199, 189, 1) 0,#5bb7a9 100%);
}
.navbar-default .navbar-brand {
  color: #ffffff;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color: #ffffff;
}
.navbar-default .navbar-text {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > a {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > .dropdown-menu {
  background-color: #5bb7a9;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
  color: #ffffff;
  background-color: #4e9d91;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
  background-color: #4e9d91;
}
.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
  color: #ffffff;
  background-color: #4e9d91;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #ffffff;
  background-color: #4e9d91;
}
.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
  color: #ffffff;
  background-color: #4e9d91;
}
.navbar-default .navbar-toggle {
  border-color: #4e9d91;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: #4e9d91;
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #ffffff;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border-color: #ffffff;
}
.navbar-default .navbar-link {
  color: #ffffff;
}
.navbar-default .navbar-link:hover {
  color: #ffffff;
}

@media (max-width: 767px) {
  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
    color: #ffffff;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #ffffff;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #ffffff;
    background-color: #4e9d91;
  }
}


/*
Cusm CSS for App
*/


#nitnem_baani_container,
.list-group {
    margin-top: 50px;
    margin-bottom: 0px;
}

.navbar-toggle .icon-bar {
	width: 3px;
	height: 3px;
	border-radius: 50%;
}

#baani_container {
	position: relative;
	padding-top: 50px;
	padding-bottom: 20px;
}

#baani_container .carousel .carousel-inner .item .carousel-caption {
	position: initial;
	text-shadow: none;
}

#baani_container .footer {
	position: fixed;
	bottom: 0;
	height: 40px;
  line-height: 40px;
  text-align: center;
  width: 100%;
  color: #FFF;
  /*background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);*/
  background-image: linear-gradient(to bottom,rgba(131, 199, 189, 1) 0,#5bb7a9 100%);
}

.carousel-control.left, .carousel-control.right {
	background: none;
	position: fixed;
	color: red;
	opacity: 1;
    width: 6%;
    padding-left: 10px;
    padding-right: 10px;
}

.baani_container_carousel {
    padding-left: 5%;
    padding-right: 5%;
}

a.list-group-item:hover,
a.list-group-item:focus {
    background-color: #f0ad4e !important;
}

// Classes
@font-face {
    font-family: 'Dejaweb';
    src: url('NotoSansGurmukhi-Regular.ttf');
}


.show {
    display: block !important;
}

.hidden {
    display: none !important;
    visibility: hidden !important;
}

.list-group-item {
    font-family: 'Dejaweb';
    font-size: 20px;
    background-color: #f1f1f3;
}

.invisible {
    visibility: hidden;
}

.baaniFormatting h1 {
    font-family: 'Dejaweb';
    /*font-size: 1.5em;*/
}

.baaniFormatting p {
    font-family: 'Dejaweb';
    font-size: 25px;
    margin: 5px;
    color: #000;
}

.baaniFormatting span {
    line-height: 1.8;
    word-wrap: normal;
    display: inline-block;
}

.highlight {
    background: #5bb7a9;
    color: #FFFFFF;
}

span {
    border-radius: 10px;
}

.baaniFormatting h1 {
    color: #5bb7a9 !important;
}

.baaniFormatting h4 {
    color: #5bb7a9 !important;
}

.baaniFormatting pre {
    font-family: 'Dejaweb';
    text-align: center;
    color: #EF2938;
}

.highlightH1 {
    background: #5bb7a9;
    color: #FFFFFF;
}

.highlightP {
    background: #000;
    color: #FFFFFF;
}

